Phase 6 - Board drawn based on color